plugins {
    id 'org.springframework.boot' version '2.7.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'base'
}

group = 'org.simplesoul'
sourceCompatibility = '17'

ext {
    profile = project.hasProperty("profile") ? project.profile : "dev"
}

allprojects {
    repositories {
        maven { url 'https://maven.aliyun.com/repository/public/' }
        maven { url 'https://jitpack.io' }
        mavenLocal()
        mavenCentral()
    }
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.javassist:javassist:3.29.0-GA'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.1'
    implementation 'com.github.Steppschuh:Java-Markdown-Generator:1.3.2'
    implementation 'org.apache.commons:commons-text:1.9'
    implementation 'org.reflections:reflections:0.10.2'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompileOnly 'org.springframework.boot:spring-boot-configuration-processor'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
}

tasks.named('test') {
    jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000'
    jvmArgs '--enable-preview'
    useJUnitPlatform()
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add("--enable-preview")
}

tasks.register("copyDependencies", Zip) {
    archiveBaseName = 'lib'
    from project.configurations.runtimeClasspath
}